fixing whitespaces and adding pictures'

--- a/tales-from-the-loop/foundry2.css
+++ b/tales-from-the-loop/foundry2.css
@@ -1,11 +1,9 @@
 /*
-------------------------------------------
 FoundryVTT Login Pages made by Doluprane
 Kind of a fork from github.com/dandln
 based on code by u/bass-blowfish
 
 Currently working in v11
-------------------------------------------
 */
 
 /* CONFIGURATION AREA */
@@ -28,17 +26,17 @@ body.auth .app {
   box-shadow:0 0 5px black;
   background:var(--login-app-background-color)
 }
-
+  
 body.auth #main-header {
   background:var(--login-world-logo);
   background-repeat:no-repeat;
-  background-size:80%;
+  background-size:60%;
   background-position:center;
   height:120px!important;
   border:none;
   box-shadow:none
 }
-
+  
 body.auth #watermark::before {
   display:block;
   content:" ";
@@ -51,21 +49,21 @@ body.auth #watermark::before {
   margin-top:calc(calc(var(--login-footer-logo-height) * -1) + 25px);
   margin-bottom:5px
 }
-
+  
 body.join #join-game {
   grid-template-columns:1fr!important
 }
-
+  
 body.auth #main-header h1 {
   display:var(--login-show-text-title)
 }
-
+  
 #join-game {
   width:400px!important;
   top:calc(50% - 300px)!important
 }
-
-#join-game input,#join-game select,#join-game button {
+  
+#join-game input, #join-game select, #join-game button {
   min-height:40px;
   padding:10px!important;
   border:none!important;
@@ -73,24 +71,24 @@ body.auth #main-header h1 {
   width:100%;
   font-family:var(--font)
 }
-
-#join-game input:focus,#join-game select:focus {
+  
+#join-game input:focus, #join-game select:focus {
   outline:solid var(--login-button-color)
 }
-
+  
 #join-game select option {
   background:var(--login-input-text-background-color);
   color:var(--login-input-text-color)
 }
-
-#join-game input[type="text"],#join-game input[type="password"],select {
+  
+#join-game input[type="text"], #join-game input[type="password"], select {
   background:var(--login-input-text-background-color);
   color:var(--login-input-text-color);
   text-align:center;
   text-align:-webkit-center;
   line-height:100%
 }
-
+  
 #join-game button {
   position:relative;
   z-index:0;
@@ -105,7 +103,7 @@ body.auth #main-header h1 {
   transition:all .3s ease;
   font-family:var(--font)
 }
-
+  
 #join-game button__text {
   display:flex;
   justify-content:center;
@@ -113,61 +111,61 @@ body.auth #main-header h1 {
   width:100%;
   height:100%
 }
-
+  
 #join-game button__text::before {
   bottom:0;
   right:54px;
   width:calc(100% - 56px * 2 - 16px)
 }
-
+  
 #join-game button__text::after {
   bottom:0;
   left:54px;
   width:8px
 }
-
-#join-game button:hover {
+  
+#join-game button:hover, #join-game button:focus {
   background:var(--login-button-color-hover);
   box-shadow:none;
   letter-spacing:6px
 }
-
+  
 #join-game button:focus {
   outline:none
 }
-
+  
 #join-game button[name="join"]:after {
   content:"\f522";
   padding-left:5px;
   font-family:'FontAwesome'
 }
-
+  
 #join-game button[name="shutdown"]:after {
   content:"\f023";
   padding-left:5px;
   font-family:'FontAwesome'
 }
-
+  
 body.auth .app:not(.window-app) {
   padding:1.15rem;
-  margin-top:3.5rem
+  margin-top:4.5rem
 }
-
+  
 #join-game select:required:invalid {
   color:var(--login-input-text-color-placeholder)!important
 }
-
+  
 #join-game select {
   appearance:none;
   -webkit-appearance:none;
   -moz-appearance:none;
   text-align-last:center
 }
-
-body.auth label.icon,#join-game-world,#join-game-details,#join-game .divider,#join-game .return-setup,#join-game button[name="join"] i.fas.fa-check,#join-game button[name="shutdown"] .fas.fa-lock,#join-game select option:checked {
+  
+body.auth label.icon, #join-game-world, #join-game-details, #join-game .divider, #join-game .return-setup, #join-game button[name="join"] i.fas.fa-check, #join-game button[name="shutdown"] .fas.fa-lock, #join-game select option:checked {
   display:none
 }
-
-#join-game input::placeholder,#join-game select option:disabled {
+  
+#join-game input::placeholder, #join-game select option:disabled {
   color:var(--login-input-text-color-placeholder)
 }
